# mangle-wasm

./: build_wasm.sh  compile_go_to_wasm.md  go.mod  index.html
examples/: index.html  main.js
interpreter/: interpreter_notjs.go
pkg/: mangle_wasm_wrapper.js  mangle_wasm_wrapper_bg.wasm  package.json  text-encoding.js
rust/: Cargo.toml
rust/engine/src/: lib.rs
rust/mangle-wasm-wrapper/: Cargo.toml  README.md
rust/mangle-wasm-wrapper/src/: lib.rs
rust/parse/src/: lib.rs
wasm/: main.go
web/: mangle_test.js
