[package]
name = "mangle-wasm-wrapper"
version = "0.1.0"
authors = ["Jules"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fxhash = "0.2.1"

mangle-ast = { path = "../ast" }
mangle-parse = { path = "../parse" }
mangle-engine = { path = "../engine" }
mangle-factstore = { path = "../factstore" }
mangle-analysis = { path = "../analysis" }
